--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "datepicker": "0.0.0",
     "dotenv": "^6.2.0",
     "firebase": "^5.8.1",
     "react": "^16.7.0",
