--- a/package.json
+++ b/package.json
@@ -3,11 +3,16 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "datepicker": "0.0.0",
+    "cuid": "^2.1.6",
+    "date-fns": "^2.0.0-alpha.27",
     "dotenv": "^6.2.0",
     "firebase": "^5.8.1",
+    "moment": "^2.24.0",
     "react": "^16.7.0",
+    "react-cropper": "^1.0.1",
+    "react-datepicker": "^1.8.0",
     "react-dom": "^16.7.0",
+    "react-dropzone": "^4.2.9",
     "react-redux": "^5.1.1",
     "react-redux-firebase": "^2.2.6",
     "react-router-dom": "^4.3.1",
