--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "react-datepicker": "^1.8.0",
     "react-dom": "^16.7.0",
     "react-dropzone": "^4.2.9",
+    "react-lazyload": "^2.5.0",
     "react-redux": "^5.1.1",
     "react-redux-firebase": "^2.2.6",
     "react-router-dom": "^4.3.1",
