--- a/package.json
+++ b/package.json
@@ -8,12 +8,13 @@
     "dotenv": "^6.2.0",
     "firebase": "^5.8.1",
     "moment": "^2.24.0",
+    "query-string": "^6.2.0",
     "react": "^16.7.0",
     "react-cropper": "^1.0.1",
     "react-datepicker": "^1.8.0",
     "react-dom": "^16.7.0",
     "react-dropzone": "^4.2.9",
-    "react-lazyload": "^2.5.0",
+    "react-lazyload": "^2.6.1",
     "react-redux": "^5.1.1",
     "react-redux-firebase": "^2.2.6",
     "react-router-dom": "^4.3.1",
