--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "dating-react",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://alittlebitofcode.site/datingreact",
   "dependencies": {
     "cuid": "^2.1.6",
     "date-fns": "^2.0.0-alpha.27",
